# grit

./: .gitignore  Cargo.toml  README.md  justfile
src/: command.rs  index.rs  lib.rs  main.rs  object.rs  repository.rs  utils.rs
src/object/: blob.rs  commit.rs  tree.rs
