[package]
name = "grit"
version = "0.1.0"
edition = "2021"

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
chrono = { version = "0.4.38", features = ["alloc", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
libc = "0.2"
sha1 = "0.10.6"
thiserror = "1.0.61"

[dev-dependencies]
rand = { version = "0.8.5", features = ["std_rng"] }
pretty_assertions_sorted = "1.2.3"
